@@ -1,6 +1,6 @@
 <?php
 /*
- * $Header: /cvsroot/nocc/nocc/webmail/utils/functions.php,v 1.5 2008/06/22 12:22:38 goddess_skuld Exp $ 
+ * $Header: /cvsroot/nocc/nocc/webmail/utils/functions.php,v 1.6 2008/09/05 21:33:20 gerundt Exp $ 
  *
  * Copyright 2001 Nicolas Chalanset <nicocha@free.fr>
  * Copyright 2001 Olivier Cahagne <cahagn_o@epita.fr>
@@ -1262,11 +1262,11 @@ function get_page_nav($pages, $skip) {
     $html .= '<div class="pagenav"><ul>';
     $html .= '<li class="pagexofy"><span>' . $html_page . ' ' . $form_select . ' ' . $html_of . ' ' . $pages . '</span></li>';
     if ($pskip > -1 ) // if NOT first page...
-      $html .= '<li class="prev"><a href="' . $_SERVER['PHP_SELF'] . '?skip=' . $pskip . '" title="' . $title_prev_page . '">&laquo; ' . $alt_prev . '</a></li>';
+      $html .= '<li class="prev"><a href="' . $_SERVER['PHP_SELF'] . '?skip=' . $pskip . '" title="' . $title_prev_page . '" rel="prev">&laquo; ' . $alt_prev . '</a></li>';
     else // if first page...
       $html .= '<li class="prev"><span> &laquo; ' . $alt_prev . '</span></li>';
     if ($start_page > 1) {
-      $html .= '<li class="page"><a href="' . $_SERVER['PHP_SELF'] . '?skip=0" title="' . $html_page . ' 1">1</a></li>';
+      $html .= '<li class="page"><a href="' . $_SERVER['PHP_SELF'] . '?skip=0" title="' . $html_page . ' 1" rel="first">1</a></li>';
       if ($start_page > 2) {
         $html .= '<li class="extend"><span>&hellip;</span></li>';
       }
@@ -1282,10 +1282,10 @@ function get_page_nav($pages, $skip) {
       if ($end_page < $pages - 1) {
         $html .= '<li class="extend"><span>&hellip;</span></li>';
       }
-      $html .= '<li class="page"><a href="' . $_SERVER['PHP_SELF'] . '?skip=' . ($pages - 1) . '" title="' . $html_page . ' ' . $pages . '">' . $pages . '</a></li>';
+      $html .= '<li class="page"><a href="' . $_SERVER['PHP_SELF'] . '?skip=' . ($pages - 1) . '" title="' . $html_page . ' ' . $pages . '" rel="last">' . $pages . '</a></li>';
     }
     if ($nskip < $pages) // if NOT last page...
-      $html .= '<li class="next"><a href="' . $_SERVER['PHP_SELF'] . '?skip=' . $nskip . '" title="' . $title_next_page . '">' . $alt_next . ' &raquo;</a></li>';
+      $html .= '<li class="next"><a href="' . $_SERVER['PHP_SELF'] . '?skip=' . $nskip . '" title="' . $title_next_page . '" rel="next">' . $alt_next . ' &raquo;</a></li>';
     else // if last page...
       $html .= '<li class="next"><span>' . $alt_next . ' &raquo;</span></li>';
     $html .= '</ul></div>';
